# katbin-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml  mprocs.yaml
api/: Cargo.toml
api/src/: lib.rs  middleware.rs  schema.rs
api/templates/: base.html.tera  index.html.tera  login.html.tera  register.html.tera  show.html.tera
docker/: docker-compose.yaml
entity/: Cargo.toml
entity/src/: lib.rs  mod.rs  pastes.rs  prelude.rs  schema.rs  users.rs  users_tokens.rs
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20220120_000001_create_paste_table.rs
service/: Cargo.toml
service/src/: lib.rs  mutation.rs  query.rs  utils.rs
src/: main.rs
tailwind/: base.css  package.json  pnpm-lock.yaml  tailwind.config.js
