workspace = { members = ["api", "migration"] }
[package]
name = "katbin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "api" }
axum = "0.7.4"
config = "0.13.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"]}

[profile.release]
strip = "symbols"
lto = "thin"