[package]
name = "api"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
service = { path = "../service" }

anyhow = "1.0.80"
axum = "0.7.4"
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs"] }
tower-cookies = { version = "0.10.0", features = ["signed"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"]}
tera = "1.19.1"
